2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Preferentially load symbol
        versions which are known to be good, before falling back to generic
        unversioned symbols.  This avoids picking up random crappy interface
        versions in the dlsym roulette.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/configure.in
        * openal/linux/src/arch/arts/arts.c
        * openal/linux/src/arch/esd/esd.c: From Marco Ziech <mmz@gmx.net>:
        Add option to load arts and esd libraries at run-time.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c
        * openal/linux/src/alc/alc_context.c: If _alcDeviceSet() fails then
        return straight after setting the error code, instead of proceeding
        to call _alSetMixer().  This stops AL going into a tight loop if
        a driver's set_write_???() fails.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Fix from Marco Ziech <mmz@gmx.net>
        for more correct dlsym error handling.

2004-06-04  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Fixes from Marco Ziech
        <mmz@gmx.net>: Fixes for ALSA backend - fix some bugs
        in alsa_blitbuffer, including handling of EPIPE.  Also init ALSA
        in non-blocking mode so that ALSA init can potentially properly fail
        instead of hang if artsd or esd are running.

2004-05-29  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_queue.c: Assert fix from
        Erik Hofman <erik@ehofman.com>

2004-05-23  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/arts/arts.c: ARTS fix from
        Andreas Beckermann <b_mann@gmx.de>

2004-05-21  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/irix/iris.c: Various IRIX backend
	fixes from Erik Hofman.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/irix/iris.c: New IRIX backend from