@@ -1,3 +1,9 @@
+2004-06-30  Adam D. Moss  <adam@gimp.org>
+
+        * openal/linux/src/arch/alsa/alsa.c: Nonsensical partial revertion to
+        work around problem experienced by Prakash K. Cheemplavam.  My
+        respect for ALSA has slowly eroded close to the negative by now.
+
 2004-06-25  Adam D. Moss  <adam@gimp.org>
 
         * openal/linux/src/arch/alsa/alsa.c: Preferentially load symbol
